Leave yaml formatting alone, prettier

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -131,7 +131,8 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         PlatformALBDNSName: !Ref PlatformALBDNSName
@@ -143,9 +144,11 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
@@ -175,7 +178,8 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         ECSCluster: !Ref ECSCluster
         EnvironmentType: !Ref EnvironmentType
@@ -199,14 +203,18 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         OpsFatalMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         ECSCluster: !Ref ECSCluster
         WorkerServiceName: !GetAtt ExchangeStack.Outputs.WorkerServiceName
@@ -221,7 +229,8 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         PlatformALBDNSName: !Ref PlatformALBDNSName
@@ -233,9 +242,11 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
@@ -263,22 +274,26 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         VPCSubnet1: !Ref VPCSubnet1
         VPCSubnet2: !Ref VPCSubnet2
         VPCSubnet3: !Ref VPCSubnet3
-        VPCCertificateArn: !Ref VPCCertificateArn
+        VPCCertificateArn:  !Ref VPCCertificateArn
         ECSCluster: !Ref ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         SecretsBase: !Ref SecretsBase
@@ -306,7 +321,8 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         PlatformALBDNSName: !Ref PlatformALBDNSName
@@ -318,9 +334,11 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
@@ -348,14 +366,18 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         OpsFatalMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         AuguryWorkerLogGroupName: !GetAtt AuguryStack.Outputs.WorkerLogGroupName
@@ -370,7 +392,8 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         ECSCluster: !Ref ECSCluster
         ECSInstanceIAMRoleArn: !Ref ECSInstanceIAMRoleArn
@@ -386,7 +409,8 @@ Resources:
         VPCSubnet2: !Ref VPCSubnet2
         VPCSubnet3: !Ref VPCSubnet3
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
@@ -399,7 +423,8 @@ Resources:
     Condition: IsStaging
     Properties:
       NotificationARNs:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         PlatformALBDNSName: !Ref PlatformALBDNSName
@@ -411,9 +436,11 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
@@ -439,7 +466,8 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         PlatformALBDNSName: !Ref PlatformALBDNSName
@@ -451,9 +479,11 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
@@ -479,14 +509,18 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         OpsFatalMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         AudioSqsCallbackName: !Sub "/prx/${EnvironmentTypeAbbreviation}/cms-audio-lambda/SQS_CALLBACK_NAME"
@@ -503,7 +537,8 @@ Resources:
     Condition: IsStaging
     Properties:
       NotificationARNs:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         PlatformALBDNSName: !Ref PlatformALBDNSName
@@ -515,9 +550,11 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
@@ -544,7 +581,8 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         PlatformALBDNSName: !Ref PlatformALBDNSName
@@ -556,9 +594,11 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
@@ -587,7 +627,8 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         ECSClusterArn: !Ref ECSClusterArn
         ECSServiceIAMRoleArn: !Ref ECSServiceIAMRoleArn
@@ -606,7 +647,8 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         PlatformALBDNSName: !Ref PlatformALBDNSName
@@ -618,9 +660,11 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
@@ -646,7 +690,8 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         PlatformALBDNSName: !Ref PlatformALBDNSName
@@ -658,9 +703,11 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
