Add artifact bucket read-only policy

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -198,6 +198,17 @@ Resources:
               - s3:PutObject
             Resource:
               - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/*"]]
+  ArtifactBucketReadOnlyAccessPolicy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Action:
+              - s3:GetObject
+            Resource:
+              - !Sub ${ArtifactStore.Arn}/*
   ArtifactBucketReadWriteAccessPolicy:
     Type: AWS::IAM::ManagedPolicy
     Properties:
