Add missing Lambda event types

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -973,6 +973,7 @@ Resources:
                 - CodePipeline Pipeline Execution State Change
               resources:
                 - !Sub arn:${AWS::Partition}:codepipeline:${AWS::Region}:${AWS::AccountId}:${Pipeline}
+          Type: EventBridgeRule
         StageEventsRule:
           Properties:
             Pattern:
@@ -982,6 +983,7 @@ Resources:
                 - CodePipeline Stage Execution State Change
               resources:
                 - !Sub arn:${AWS::Partition}:codepipeline:${AWS::Region}:${AWS::AccountId}:${Pipeline}
+          Type: EventBridgeRule
         ActionsEventsRule:
           Properties:
             Pattern:
@@ -991,7 +993,6 @@ Resources:
                 - CodePipeline Action Execution State Change
               resources:
                 - !Sub arn:${AWS::Partition}:codepipeline:${AWS::Region}:${AWS::AccountId}:${Pipeline}
-
           Type: EventBridgeRule
       Handler: index.lambda_handler
       MemorySize: 128
