Improve pipeline failure notifications in event handler

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -119,6 +119,8 @@ Resources:
           - Effect: Allow
             Action:
               - codepipeline:GetPipelineState
+              - codepipeline:GetPipelineExecution
+              - codepipeline:ListActionExecutions
             Resource:
               - !Sub arn:${AWS::Partition}:codepipeline:${AWS::Region}:${AWS::AccountId}:${Pipeline}
   CloudFormationReadOnlyAccessPolicy:
@@ -845,6 +847,7 @@ Resources:
       Handler: index.lambda_handler
       MemorySize: 128
       Policies:
+        - !Ref CodePipelineStateReadOnlyAccessPolicy
         - !Ref SlackRelaySnsPublishOnlyAccessPolicy
       Runtime: python3.8
       Tags:
