Fix function handler name

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -793,7 +793,7 @@ Resources:
               resources:
                 - !Sub arn:${AWS::Partition}:codepipeline:${AWS::Region}:${AWS::AccountId}:${Pipeline}
           Type: EventBridgeRule
-      Handler: index.lambda_handler
+      Handler: lambda_function.lambda_handler
       MemorySize: 128
       Policies:
         - !Ref CodePipelineStateReadOnlyAccessPolicy
