Add Lambda log groups

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -1205,6 +1205,11 @@ Resources:
         "prx:cloudformation:stack-name": !Ref AWS::StackName
         "prx:cloudformation:stack-id": !Ref AWS::StackId
       Timeout: 3
+  ChangeSetDeltaNotificationLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${ChangeSetDeltaNotificationFunction}
+      RetentionInDays: 14
   ChangeSetDeltaNotificationNotificationErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -1264,6 +1269,11 @@ Resources:
         "prx:cloudformation:stack-name": !Ref AWS::StackName
         "prx:cloudformation:stack-id": !Ref AWS::StackId
       Timeout: 3
+  DeploymentNotificationLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${DeploymentNotificationFunction}
+      RetentionInDays: 14
   DeploymentNotificationErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -1319,6 +1329,11 @@ Resources:
         "prx:cloudformation:stack-name": !Ref AWS::StackName
         "prx:cloudformation:stack-id": !Ref AWS::StackId
       Timeout: 5
+  EnvironmentStateCaptureLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${EnvironmentStateCaptureFunction}
+      RetentionInDays: 14
   EnvironmentStateCaptureErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -1372,6 +1387,11 @@ Resources:
         "prx:cloudformation:stack-name": !Ref AWS::StackName
         "prx:cloudformation:stack-id": !Ref AWS::StackId
       Timeout: 8
+  ProductionConfigPseudoSourceLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${ProductionConfigPseudoSourceFunction}
+      RetentionInDays: 14
   ProductionConfigPseudoSourceErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -1422,6 +1442,11 @@ Resources:
         "prx:cloudformation:stack-name": !Ref AWS::StackName
         "prx:cloudformation:stack-id": !Ref AWS::StackId
       Timeout: 8
+  InfrastructureRepoSourceS3SyncLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${InfrastructureRepoSourceS3SyncFunction}
+      RetentionInDays: 14
   InfrastructureRepoSourceS3SyncErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
