Add CodeStar permission to pipeline

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -372,6 +372,19 @@ Resources:
                   - sns:Publish
                 Resource:
                   - !Ref CodePipelineApprovalsSnsTopic
+        # To allow the pipeline to use a CodeStar Connection
+        - PolicyName: CodeStarConnectionPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - codestar-connections:*
+                Resource:
+                  - !Ref CodeStarConnectionArn
+                Condition:
+                  "ForAllValues:StringEquals":
+                    "codestar-connections:PassedToService": codepipeline.amazonaws.com
         # Allow CodePipeline to manipulate CloudFormation root stacks
         - PolicyName: RootStackCloudFormationAccess
           PolicyDocument:
