Add Apple domain verification record

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -38,6 +38,7 @@ Resources:
             - '"google-site-verification=NgVnyJeUZ7gbeAr4l2BeDMfDonC-U6W2VONkOMxb4IM"'
             - '"v=spf1 include:servers.mcsv.net include:_spf.invoicesherpa.com include:mail.zendesk.com include:_spf.google.com include:amazonses.com -all"'
             - '"MS=ms48604406"'
+            - '"apple-domain-verification=nd7ZcKMYeWFpLWd1"'
           TTL: "300"
           Type: TXT
           Name: !Ref Domain
