Use correct repo for meta source

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -485,7 +485,7 @@ Resources:
                 Version: "1"
               Configuration:
                 ConnectionArn: !Ref CodeStarConnectionArn
-                FullRepositoryId: PRX/Infrastructure
+                FullRepositoryId: PRX/meta.prx.org
                 BranchName: master
                 OutputArtifactFormat: CODE_ZIP
               OutputArtifacts:
