--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -354,7 +354,9 @@ Resources:
         ContainerPort: "3000"
         HealthCheckPath: "/health_check"
         DesiredWebs: "2"
-        DesiredWebsProduction: "1"
+        DesiredWebsProduction: "2"
+        DesiredWorkers: "2"
+        DesiredWorkersProduction: "2"
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
