Update DNS or Memory Palace

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -134,5 +134,5 @@ Resources:
         - { Type: AAAA, Name: !Sub "pff85cqvabwf.${Domain}", AliasTarget: { DNSName: "d3ew6qm77kn16e.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
 
         # Memory Palace
-        - { Type: A,    Name: !Sub "pf8b35zhcw0t.${Domain}", AliasTarget: { DNSName: "tktktktk.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
-        - { Type: AAAA, Name: !Sub "pf8b35zhcw0t.${Domain}", AliasTarget: { DNSName: "tktktktk.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: A,    Name: !Sub "pf8b35zhcw0t.${Domain}", AliasTarget: { DNSName: "d2uj1mxstn3zlc.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf8b35zhcw0t.${Domain}", AliasTarget: { DNSName: "d2uj1mxstn3zlc.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
