Select from most recent supported versions

--- a/db/mysql-instance.yml
+++ b/db/mysql-instance.yml
@@ -99,6 +99,10 @@ Parameters:
     ConstraintDescription: >-
       must begin with a letter and contain only alphanumeric characters, dash,
       or colon.
+  EngineVersion:
+    Type: String
+    Description: Mysql version to use
+    AllowedValues: ["8.0.21", "8.0.20", "5.7.31", "5.7.30"]
   EnvironmentType:
     Type: String
     AllowedValues:
@@ -167,7 +171,7 @@ Resources:
       DBSnapshotIdentifier:
         !If [UseSnapshot, !Ref DBSnapshot, !Ref "AWS::NoValue"]
       Engine: MySQL
-      EngineVersion: 5.5.46
+      EngineVersion: !Ref EngineVersion
       MasterUsername: !If [UseSnapshot, !Ref "AWS::NoValue", !Ref DBUser]
       MasterUserPassword:
         !If [UseSnapshot, !Ref "AWS::NoValue", !Ref DBPassword]
