Add back 5.5 for existing db

--- a/db/mysql-instance.yml
+++ b/db/mysql-instance.yml
@@ -102,7 +102,7 @@ Parameters:
   EngineVersion:
     Type: String
     Description: Mysql version to use
-    AllowedValues: ["8.0.21", "8.0.20", "5.7.31", "5.7.30"]
+    AllowedValues: ["8.0.21", "8.0.20", "5.7.31", "5.7.30", "5.5.46"]
   EnvironmentType:
     Type: String
     AllowedValues:
