--- a/db/postgresql-instance.yml
+++ b/db/postgresql-instance.yml
@@ -142,6 +142,7 @@ Resources:
   PostgresInstance:
     Type: "AWS::RDS::DBInstance"
     DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       AllocatedStorage: !Ref AllocatedStorage
       AllowMajorVersionUpgrade: false
@@ -178,6 +179,7 @@ Resources:
   PostgresParameterGroup:
     Type: "AWS::RDS::DBParameterGroup"
     DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       Description: !Sub ${UniqueName} ${EnvironmentType} Parameter Group
       Family: !FindInMap [EngineVersionMap, !Ref EngineVersion, family]
@@ -193,6 +195,7 @@ Resources:
   PostgresSubnetGroup:
     Type: "AWS::RDS::DBSubnetGroup"
     DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       DBSubnetGroupDescription: !Sub ${UniqueName} ${EnvironmentType} Subnet Group
       DBSubnetGroupName: !Sub ${UniqueName}-${EnvironmentType}-Postgres
@@ -213,6 +216,7 @@ Resources:
   PostgresVPCSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       GroupName: !Sub ${UniqueName}${EnvironmentType}Postgres
       GroupDescription: !Sub ${UniqueName} ${EnvironmentType} Postgres Security Group
